# ai-engineering-from-scratch

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORKING.md  LESSON_TEMPLATE.md  Makefile  README.md  README.zh.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SUPPORT.md  Untitled.ipynb  astronvim-setup.md  catalog.json  file.py  learning-path.md  lesson_02_complete.md  my-progress.md  my_learning_log.md  package.json  pyproject.toml  quiz.json  requirements.txt  staticwebapp.config.json  translate_quizzes.py  vercel.json
.claude/: CLAUDE.md  setup.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  new_lesson_proposal.md
.github/workflows/: azure-static-web-apps.yml  ci.yml  curriculum.yml
.hermes/plans/: 2026-05-28-213000-fork-localize-ai-course.md
_two-claude-review/: aiefs_REVIEW_PROTOCOL.md
_two-claude-review/handoffs/: 00-01-handoff.md
_two-claude-review/kb-exports/: 00-01-kb-entry.md
_two-claude-review/reviews/: 00-01-review.md
_two-claude-review/templates/: aiefs_handoff-template.md  aiefs_kb-export-template.md  aiefs_review-template.md
book/: README.md  book.css  vol-1-foundations.html  vol-2-modern-ai-and-llms.html  vol-3-ai-in-production.html
docs/: quickstart.md
glossario/: style-guide-pt-br.md  termos-pt-br.md
glossary/: README.md  myths.md  terms.md
i18n/zh/: phases.json  (+3 more)
my-ai-project/: pyproject.toml
scripts/: _lib.py  audit_lessons.py  batches.json  build_catalog.py  check_readme_counts.py  install_skills.py  lesson_run.py  link_check.py  listar-aulas.py  quiz_coverage.py  scaffold-lesson.sh  scaffold_quizzes.py  scaffold_tests.py  scaffold_workbench.py  test_build_i18n.mjs  ts_syntax_check.mjs
site/: FRONTEND.md  about.html  animations.css  app.js  books.html  build.js  catalog.html  cmdpalette.js  content-translations.js  dashboard.html  dashboard.js  data.js  figures-agents-alignment.js  figures-llms-systems.js  figures.js  glossary.html  header.js  i18n.js  index.html  lesson-figures.js  lesson.html  local-server.mjs  phase.html  phase.js  prereqs.html  progress.js  quiz-translations.js  style.css
tests/: test_llm_provider.py  test_minimax_integration.py
utils/: llm_provider.py
(+3628 files in other folders)
